# cmd/server/docs/swagger.json
@@ -408,10 +408,15 @@
                 "attributeId": {
                     "type": "string"
                 },
+                "childConnectorOperator": {
+                    "description": "joins own leaf check with children-group",
+                    "type": "string"
+                },
                 "conditionId": {
                     "type": "string"
                 },
                 "connectorOperator": {
+                    "description": "forward-link to next sibling",
                     "type": "string"
                 },
                 "dataType": {
